--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32137,6 +32137,10 @@ select {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+button {
+  color:blue!important;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
